# cooliomusic

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: lint-errors.mdc
docs/: ELEVENLABS_MUSIC_COOKBOOK.md  KLINGAI_IMAGE_TO_VIDEO_API.md  MUSIC_PROMPTING_BEST_PRACTICES.md  PRD.md  STABLE_AUDIO_API.md
experiments/visuals/: disc_generator.py  elements.py  test_disc.py
src/coolio/: __init__.py  cli.py  compose.py  config.py  djcoolio.py  generator.py  mixer.py  models.py  session_image.py  video_loop.py
src/coolio/agents/: __init__.py  curator.py
src/coolio/core/: config.py
src/coolio/music/: __init__.py  agent.py  generator.py
src/coolio/music/providers/: __init__.py  base.py  elevenlabs.py  stable_audio.py
src/coolio/providers/: __init__.py  base.py  elevenlabs.py  kling.py  openrouter_image.py  stable_audio.py
src/coolio/video/: __init__.py  composer.py  metadata.py  waveform.py
src/coolio/visuals/: __init__.py  generator.py  klingai.py  prompts.py
